--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser": "^15.1.0",
     "@angular/platform-browser-dynamic": "^15.1.0",
     "@angular/router": "^15.1.0",
+    "@codemirror/lang-angular": "^0.1.0",
+    "@ngstack/code-editor": "^5.0.0",
     "json-server": "^0.17.3",
     "ngx-toastr": "^16.1.0",
     "rxjs": "~7.8.0",
